--- a/displays/index.html
+++ b/displays/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filas</title>
+    <title>Displays</title>
     <style>
         body {
             font-family: Arial;
@@ -20,6 +20,17 @@
             padding: 10px;
             border: 1px solid red;
         }
+        .item:nth-of-type(4) {
+            background: blue;
+            overflow: auto;
+            /* display: subgrid; no Disponible */
+            /* display: inline-grid; no disponible */
+            display: grid;
+            grid-template: 50px 50px 50px / 200px 200px 200px; 
+        }
+        .item .item {
+            background: yellow;
+        }
     </style>
 </head>
 <body>
@@ -27,7 +38,13 @@
         <div class="item">contenido #1</div>
         <div class="item">contenido #2</div>
         <div class="item">contenido #3</div>
-        <div class="item">contenido #4</div>
+        <div class="item">
+            <div class="item">subitem #1</div>
+            <div class="item">subitem #2</div>
+            <div class="item">subitem #3</div>
+            <div class="item">subitem #4</div>
+            <div class="item">subitem #5</div>
+        </div>
         <div class="item">contenido #5</div>
         <div class="item">contenido #6</div>
         <div class="item">contenido #7</div>
