--- a/column-size/index.html
+++ b/column-size/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamaño de item en columnas</title>
+    <title>Tamaño de columnas</title>
     <style>
         body {
             font-family: Arial;
